--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,29 @@
     <groupId>ru.ilin</groupId>
     <artifactId>sql-jdbc-school</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>8</source>
+                    <target>8</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
-    
+    <properties>
+        <postgresql-driver.version>42.2.23</postgresql-driver.version>
+    </properties>
+
+    <dependencies>
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>${postgresql-driver.version}</version>
+        </dependency>
+
+    </dependencies>
 </project>
